--- a/assets/style.scss
+++ b/assets/style.scss
@@ -25,6 +25,19 @@ body {
     max-width: 1200px;
     margin: 0 auto;
 
+    @media (max-width : 1200px) {
+        max-width: 991px;
+    }
+
+    @media (max-width : 990px) {
+        max-width: 768px;
+    }
+
+    @media (max-width : 768px) {
+        max-width: 100%;
+        padding: 0 15px;
+    }
+
     &--form {
         max-width: 1340px;
     }
@@ -40,73 +53,21 @@ body {
     height: 983px;
 
 
-
-    &__wrapper {
-        z-index: -100;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-
-
-        &__first {
-            position: relative;
-            width: 14px;
-            height: 14px;
-            top: 18%;
-            left: 10%;
-
-        }
-
-        &__second {
-            position: relative;
-            width: 8px;
-            height: 8px;
-            left: 53%;
-            top: 46%;
-        }
-
-        &__third {
-
-            position: relative;
-            width: 9px;
-            height: 9px;
-            left: 13.5%;
-            top: 77%;
-        }
-
-        &__circle {
-            position: relative;
-            width: 19px;
-            height: 19px;
-            left: 49%;
-            top: 28%;
-        }
-
-        &__bubble-top {
-            position: relative;
-            display: block;
-            width: 510px;
-            height: 510px;
-            left: 1608px;
-            top: -324px;
-            z-index: 1000;
-            filter: blur(100px);
-        }
-
-        &__bubble-center {
-            position: relative;
-            display: block;
-            width: 510px;
-            height: 510px;
-
-            left: -244px;
-            top: -320px;
-            filter: blur(100px);
-            z-index: 100000;
-        }
+    @media (max-width:1200px) {
+        height: 1450px;
     }
 
+    @media (max-width : 768px) {
+        background: $blue;
+    }
+
+    @media (max-width:420px) {
+        height: 1120px;
+    }
+
+    @media (max-width:376px) {
+        height: 1210px;
+    }
 
     &__header {
         padding-top: 5rem;
@@ -122,6 +83,15 @@ body {
             align-items: center;
             padding-right: 140px;
 
+            @media (max-width:420px) {
+                flex: none;
+                max-width: 70px;
+            }
+
+            @media (max-width:991px) {
+                padding-right: 20px;
+            }
+
             &__logo {
                 margin-right: 4rem;
 
@@ -135,6 +105,10 @@ body {
                 display: flex;
                 flex: 1;
                 justify-content: space-between;
+
+                @media (max-width : 768px) {
+                    display: none;
+                }
 
                 &__link {
                     display: inline-block;
@@ -187,12 +161,26 @@ body {
     }
 
     &__content {
+
         display: flex;
         justify-content: space-between;
         align-items: center;
         padding: 50px 0;
 
+        @media(max-width:991px) {
+            height: 1000px;
+        }
+
+
+        @media (max-width:1200px) {
+            flex-direction: column;
+        }
+
         &__block {
+            @media (max-width:1200px) {
+                text-align: center;
+            }
+
             &__title {
                 max-width: 618px;
                 padding-right: 1px;
@@ -201,6 +189,14 @@ body {
                 line-height: 122.2%;
                 color: #FFFFFF;
                 margin-bottom: 60px;
+
+                @media (max-width:1200px) {
+                    margin-top: 35px;
+                }
+
+                @media (max-width : 470px) {
+                    font-size: 30px;
+                }
             }
 
             &__subtitle {
@@ -212,11 +208,25 @@ body {
                 padding-right: 100px;
                 margin-bottom: 33px;
                 letter-spacing: 1px;
+
+                @media (max-width:1200px) {
+                    padding-right: 0;
+                }
             }
 
             &__form {
                 display: flex;
                 width: 110%;
+
+                @media (max-width:1200px) {
+                    width: 100%;
+                }
+
+                @media (max-width:615px) {
+                    flex-wrap: wrap;
+                    justify-content: center;
+                }
+
 
                 &__input,
                 &__select,
@@ -243,6 +253,12 @@ body {
                 &__select {
                     padding: 14px;
                     transition: all 0.2s linear;
+
+                    @media (max-width:376px) {
+                        margin-bottom: 35px;
+                    }
+
+
 
                     &:hover {
                         background-color: darken(#fff, 10%);
@@ -272,6 +288,16 @@ body {
                     color: #fff;
                     transition: all 0.2s linear;
 
+                    @media (max-width : 768px) {
+                        flex: none;
+                        padding: 0 20px;
+                    }
+
+                    @media (max-width:615px) {
+                        padding: 14px 20px;
+                        margin-top: 35px;
+                    }
+
                     &:hover {
                         background-color: darken($pink, 10%);
                     }
@@ -282,8 +308,23 @@ body {
         &__images {
             position: relative;
 
-            width: 527px;
-            height: 680px;
+            @media (max-width:1200px) {
+                margin-top: 100px;
+            }
+
+            @media (max-width:1530px) {
+                transform: translateX(-50px);
+            }
+
+            @media (max-width:615px) {
+                transform: scale(0.8);
+                margin-top: 50px;
+            }
+
+            @media (max-width : 425px) {
+                transform: scale(0.5);
+                margin-top: -120px;
+            }
 
             &__client {
                 position: absolute;
@@ -338,6 +379,8 @@ body {
                 background-color: $pink;
                 border-radius: 59px;
                 z-index: 100;
+
+
             }
 
             &__girl {
@@ -361,6 +404,10 @@ body {
                 text-align: right;
                 max-width: 110px;
                 z-index: 10;
+
+                @media (max-width : 500px) {
+                    left: 78%;
+                }
             }
 
             &__users {
@@ -375,6 +422,28 @@ body {
                 transform: translateY(-50%);
                 padding: 16px 20px;
                 min-width: 288px;
+
+                @media (max-width:1430px) {
+                    left: 53%;
+                }
+
+                @media (max-width:1200px) {
+                    left: 74%;
+                }
+
+                @media (max-width : 768px) {
+                    left: 53%;
+                }
+
+                @media (max-width : 500px) {
+                    left: 38%;
+                }
+
+                @media (max-width : 425px) {
+                    left: 53%;
+                }
+
+
 
 
                 &__img {
@@ -433,6 +502,23 @@ body {
                 background: #FFFFFF;
                 border-radius: 15px;
                 z-index: 1000;
+
+                @media (max-width:1250px) {
+                    left: 46%;
+                }
+
+                @media (max-width:1200px) {
+                    left: 47%;
+                }
+
+                @media (max-width : 500px) {
+                    left: 37%;
+                }
+
+                @media (max-width : 425px) {
+                    left: 47%;
+
+                }
 
 
 
