--- a/assets/style.scss
+++ b/assets/style.scss
@@ -40,6 +40,19 @@ body {
 
     &--form {
         max-width: 1340px;
+
+        @media (max-width : 1200px) {
+            max-width: 1131px;
+        }
+
+        @media (max-width : 990px) {
+            max-width: 768px;
+        }
+
+        @media (max-width : 768px) {
+            max-width: 100%;
+            padding: 0 15px;
+        }
     }
 }
 
@@ -274,6 +287,10 @@ body {
                     max-width: 244px;
                     transition: all 0.2s linear;
 
+                    @media (max-width:615px) {
+                        text-align: center;
+                    }
+
                     &:hover {
                         background-color: darken(#fff, 10%);
                     }
@@ -294,7 +311,7 @@ body {
                     }
 
                     @media (max-width:615px) {
-                        padding: 14px 20px;
+                        padding: 14px 40px;
                         margin-top: 35px;
                     }
 
@@ -640,9 +657,24 @@ body {
         align-items: center;
         margin-bottom: 33px;
 
+        @media (max-width : 768px) {
+            flex-direction: column;
+            justify-content: center;
+        }
+
         &__description {
             width: 521px;
             margin-right: 80px;
+
+            @media (max-width : 520px) {
+                max-width: 100%;
+            }
+
+            @media (max-width : 768px) {
+                text-align: center;
+                margin-right: 0;
+                margin-bottom: 40px;
+            }
 
             &__title {
                 font-weight: 700;
@@ -660,6 +692,12 @@ body {
                 padding-right: 85px;
                 margin-bottom: 40px;
 
+                @media (max-width : 768px) {
+                    padding-right: 0;
+                }
+
+
+
                 &--starshot {
                     max-width: 449px;
 
@@ -670,6 +708,18 @@ body {
             &__buttons {
                 margin-bottom: 36px;
                 display: flex;
+
+                &--one {
+                    @media (max-width: 768px) {
+                        width: 46px;
+                    }
+                }
+
+                @media (max-width : 768px) {
+                    max-width: 105px;
+                    margin: 0 auto 36px;
+
+                }
 
                 &__android {
                     margin-right: 12px;
@@ -716,6 +766,17 @@ body {
             display: flex;
             position: relative;
 
+            @media (max-width : 768px) {
+                width: 425px;
+                height: 347px;
+
+            }
+
+            @media (max-width : 425px) {
+                width: 300px;
+                height: 347px;
+            }
+
             &--green {
                 background: #30C184;
             }
@@ -760,6 +821,10 @@ body {
                 padding-bottom: 45px;
                 max-width: 259px;
 
+                @media (max-width : 428px) {
+                    display: flex;
+                }
+
                 &__title {
                     font-weight: bold;
                     font-size: 1.8rem;
@@ -774,6 +839,10 @@ body {
                     line-height: 1.4;
                     color: #FFFFFF;
 
+                    @media (max-width : 428px) {
+                        margin-left: 30px;
+                    }
+
                 }
 
             }
@@ -783,6 +852,18 @@ body {
                 margin-left: auto;
                 padding-right: 53px;
                 margin-top: 47px;
+
+                @media (max-width : 428px) {
+                    height: 78px;
+                    margin-left: -65px;
+                    padding-right: 20px;
+                }
+
+                &--right {
+                    @media (max-width : 428px) {
+                        margin-left: -20px;
+                    }
+                }
 
 
             }
@@ -803,6 +884,10 @@ body {
         border-radius: 12px;
         transition: 0.2s linear all;
 
+        @media (max-width : 520px) {
+            max-width: 100%;
+        }
+
         &:hover {
             background-color: darken($blue, 10%);
             cursor: pointer;
@@ -820,15 +905,34 @@ body {
         line-height: 130.2%;
         color: $dark;
         margin-bottom: 60px;
+
+        @media (max-width : 768px) {
+            text-align: center;
+        }
+
     }
 
     &__block {
         display: flex;
         width: 100%;
 
+        @media (max-width : 768px) {
+            flex-wrap: wrap;
+        }
+
         &__item {
             transition: all 0.2s linear;
             width: 25%;
+
+            @media (max-width : 768px) {
+                width: 50%;
+                text-align: center;
+                margin-bottom: 45px;
+            }
+
+            @media (max-width : 474px) {
+                width: 100%;
+            }
 
             &:hover {
                 cursor: pointer;
@@ -846,6 +950,10 @@ body {
                 line-height: 145.2%;
                 color: $dark;
                 padding-right: 75px;
+
+                @media (max-width : 768px) {
+                    padding-right: 0;
+                }
             }
         }
 
@@ -861,6 +969,12 @@ body {
         background-color: #F6F5FF;
         margin-bottom: 31px;
 
+        @media (max-width:991px) {
+            align-items: center;
+        }
+
+
+
 
         &:last-child {
             margin-bottom: 0;
@@ -868,6 +982,12 @@ body {
 
         &__description {
             padding: 80px 0 70px 78px;
+
+            @media (max-width : 768px) {
+                text-align: center;
+                margin: 0 auto;
+                padding: 80px 0;
+            }
 
             &__title {
                 font-weight: 700;
@@ -880,6 +1000,28 @@ body {
             &__types {
                 display: flex;
                 margin-bottom: 30px;
+
+                @media (max-width : 768px) {
+                    max-width: 390px;
+                    margin: 0 auto 30px;
+                }
+
+                @media (max-width : 474px) {
+                    flex-direction: column;
+                    padding: 0 20px;
+                }
+
+                &--web {
+                    @media (max-width : 768px) {
+                        max-width: 618px;
+                        flex-wrap: wrap;
+                        padding-left: 20px;
+                    }
+
+                    @media (max-width : 474px) {
+                        flex-direction: column;
+                    }
+                }
 
                 &__button {
                     border: none;
@@ -896,8 +1038,25 @@ body {
                     background: #FFFFFF;
                     border-radius: 8px;
 
+                    @media (max-width : 474px) {
+                        margin-right: 0;
+                        margin-bottom: 20px;
+                    }
+
                     &:last-child {
                         margin-right: 0;
+                    }
+
+                    &--web {
+                        @media (max-width: 768px) {
+                            width: 40%;
+                            margin-right: 30px;
+                            margin-bottom: 20px;
+                        }
+
+                        @media (max-width : 474px) {
+                            width: 100%;
+                        }
                     }
                 }
             }
@@ -910,6 +1069,10 @@ body {
                 max-width: 620px;
                 margin-bottom: 30px;
                 padding-right: 90px;
+
+                @media (max-width : 768px) {
+                    padding-right: 0;
+                }
             }
 
             &__link {
@@ -925,6 +1088,10 @@ body {
                 &:hover {
                     background: darken($pink, 10%);
                 }
+
+                @media (max-width:387px) {
+                    padding: 1.5rem 7rem;
+                }
             }
         }
 
@@ -937,6 +1104,37 @@ body {
             background-color: #fff;
             display: block;
             margin: 31px 28px 37px 0;
+
+            @media (max-width:1350px) {
+                transform: translateX(-20px);
+            }
+
+            @media (max-width:1200px) {
+                height: 346px;
+                transform: translateY(85px);
+            }
+
+            @media (max-width:991px) {
+                height: 268px;
+                align-self: flex-end;
+                margin-bottom: 80px;
+                transform: translateX(-60px);
+            }
+
+            @media (max-width : 768px) {
+                display: none;
+            }
+
+            &--web {
+                @media (max-width:1200px) {
+                    height: 282px;
+                    transform: translateY(135px);
+                }
+
+                @media (max-width:991px) {
+                    display: none;
+                }
+            }
 
 
             &__phones {
@@ -960,6 +1158,8 @@ body {
                 background-size: 100%;
                 transform: scale(1.35) scaleX(1.2) translateX(10px) translateY(20px);
 
+
+
             }
 
             &__cube {
@@ -973,24 +1173,67 @@ body {
                 &--first {
                     top: 188px;
                     left: 67px;
+
+                    @media (max-width:1200px) {
+                        width: 50px;
+                        top: 140px;
+                        left: 55px;
+                    }
+
+                    @media (max-width:991px) {
+                        width: 30px;
+                        top: 100px;
+                        left: 47px;
+                    }
                 }
 
                 &--second {
                     width: 70px;
                     top: 100px;
                     left: 200px;
+
+                    @media (max-width:1200px) {
+                        width: 60px;
+                        top: 85px;
+                        left: 162px;
+                    }
+
+                    @media (max-width:991px) {
+                        width: 60px;
+                        top: 38px;
+                        left: 122px;
+                    }
                 }
 
                 &--third {
                     top: 65px;
                     left: 380px;
                     background-color: #F5F3F7;
+
+                    @media (max-width:1200px) {
+
+                        top: 40px;
+                        left: 305px;
+                    }
+
+                    @media (max-width:991px) {
+                        width: 50px;
+                        top: 6px;
+                        left: 236px;
+                    }
                 }
 
                 &--computer {
                     width: 100px;
-                    top: 100px;
+                    top: 115px;
                     left: 285px;
+                    background-color: #F6F8FF;
+
+                    @media (max-width:1200px) {
+                        top: 75px;
+                        left: 200px;
+
+                    }
                 }
             }
         }
@@ -1003,6 +1246,7 @@ body {
 
     &__inner {
         margin-bottom: 87px;
+        padding: 0 10px;
     }
 
     &__head {
@@ -1023,6 +1267,10 @@ body {
             justify-content: space-between;
             width: 60px;
 
+            @media (max-width:600px) {
+                display: none;
+            }
+
             &__item {
 
                 cursor: pointer;
@@ -1042,8 +1290,23 @@ body {
         display: flex;
         margin-bottom: 50px;
 
+        @media (max-width:600px) {
+            flex-direction: column;
+        }
+
         &__item {
             margin-right: 31px;
+
+            @media (max-width:600px) {
+                display: flex;
+                align-items: center;
+                margin-right: 0;
+                margin-bottom: 40px;
+            }
+
+            @media (max-width:425px) {
+                flex-direction: column;
+            }
 
             &__img {
                 display: block;
@@ -1064,6 +1327,14 @@ body {
                 font-size: 1.8rem;
                 line-height: 1.7;
                 color: $dark;
+
+                @media (max-width:600px) {
+                    margin-left: 40px;
+                }
+
+                @media (max-width:425px) {
+                    margin-left: 0;
+                }
             }
 
             &__wrapper {
@@ -1091,6 +1362,10 @@ body {
         transition: 0.2s linear all;
         text-decoration: none;
 
+        @media (max-width:600px) {
+            max-width: 100%;
+        }
+
         & svg {
             margin-right: 18px;
         }
@@ -1112,12 +1387,24 @@ body {
         margin-bottom: 65px;
     }
 
+    &__dots {
+        @media (max-width : 990px) {
+            display: none;
+        }
+
+    }
+
     &__make {
         background-color: $dark;
         flex: 1;
         margin: 0 20px;
         border-radius: 22px;
         padding: 75px 80px 0 80px;
+
+        @media (max-width : 990px) {
+            padding: 45px 45px 0 45px;
+            margin: 0;
+        }
 
         &__title {
             font-weight: 700;
@@ -1126,6 +1413,10 @@ body {
             color: #FFFFFF;
             text-align: center;
             margin-bottom: 60px;
+
+            @media (max-width:500px) {
+                font-size: 3.5rem;
+            }
         }
 
         &__item {
@@ -1134,10 +1425,28 @@ body {
 
             padding-bottom: 110px;
 
+            @media (max-width:800px) {
+                align-items: center;
+            }
+
+            @media (max-width:700px) {
+                flex-direction: column;
+            }
+
             &__info {
                 max-width: 247px;
                 margin-right: 54px;
                 padding-right: 65px;
+
+                @media (max-width : 990px) {
+                    padding-right: 0;
+                }
+
+                @media (max-width:700px) {
+                    margin: 0 auto;
+                    text-align: center;
+                }
+
 
                 &__name {
                     font-weight: 700;
@@ -1168,7 +1477,9 @@ body {
                 flex: 1;
                 position: relative;
 
-
+                @media (max-width:700px) {
+                    margin: 30px auto 0;
+                }
 
                 &__input {
                     display: block;
@@ -1207,6 +1518,10 @@ body {
                     align-items: center;
                     margin-top: 60px;
 
+                    @media (max-width:800px) {
+                        flex-direction: column;
+                    }
+
                     &__button {
 
                         display: block;
@@ -1226,6 +1541,11 @@ body {
                         &:hover {
                             background-color: darken($pink, 10%);
                         }
+
+                        @media (max-width:800px) {
+                            margin-bottom: 30px;
+                            width: 100%;
+                        }
                     }
 
                     &__text {
@@ -1236,6 +1556,10 @@ body {
                         line-height: 1.6;
                         color: #656E81;
                         padding-right: 65px;
+
+                        @media (max-width : 990px) {
+                            padding-right: 0;
+                        }
                     }
                 }
 
@@ -1255,9 +1579,24 @@ body {
         justify-content: space-between;
         align-items: center;
         padding-left: 125px;
+
+        @media (max-width : 990px) {
+            flex-direction: column;
+            padding-left: 0;
+        }
     }
 
     &__nav {
+        display: flex;
+
+        @media (max-width : 990px) {
+            margin-bottom: 30px;
+        }
+
+        @media (max-width : 500px) {
+            flex-direction: column;
+        }
+
         &__link {
             text-decoration: none;
             font-weight: 700;
@@ -1266,6 +1605,13 @@ body {
             text-align: center;
             padding: 0 20px;
             color: $dark;
+
+            @media (max-width : 500px) {
+                margin-bottom: 20px;
+                text-align: center;
+                padding: 0;
+                font-size: 2rem;
+            }
 
             &:last-child {
                 padding-right: 0;
@@ -1277,6 +1623,10 @@ body {
 
     &__social {
         display: flex;
+
+        @media (max-width : 990px) {
+            margin-bottom: 30px;
+        }
 
         &__item {
             padding-left: 5px;
